Fix scrollbars

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ width: 100%;
 display: flex;
 margin: 0%;
 position: relative;
+overflow: hidden;
 flex-direction: column;
 align-items: center;
 justify-content: flex-start;
